--- a/1-入门Pandas.ipynb
+++ b/1-入门Pandas.ipynb
@@ -1778,6 +1778,456 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "提取标量值："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.24049266687267873"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[dates[0], 'A']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "快速访问标量，与上述方法等效："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.24049266687267873"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.at[dates[0], 'A']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4、按位置选择"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "用整数位置选择："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A   -0.944664\n",
+       "B    0.276492\n",
+       "C   -1.174007\n",
+       "D   -0.529376\n",
+       "Name: 2020-08-24 00:00:00, dtype: float64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "类似 NumPy / Python，用整数切片："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-08-24</th>\n",
+       "      <td>-0.944664</td>\n",
+       "      <td>0.276492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-25</th>\n",
+       "      <td>-2.594362</td>\n",
+       "      <td>-0.708836</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   A         B\n",
+       "2020-08-24 -0.944664  0.276492\n",
+       "2020-08-25 -2.594362 -0.708836"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[3:5, 0:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "类似 NumPy / Python，用整数列表按位置切片："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-08-22</th>\n",
+       "      <td>0.585824</td>\n",
+       "      <td>-0.847243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-23</th>\n",
+       "      <td>-1.503538</td>\n",
+       "      <td>-2.263381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-25</th>\n",
+       "      <td>-2.594362</td>\n",
+       "      <td>-1.577329</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   A         C\n",
+       "2020-08-22  0.585824 -0.847243\n",
+       "2020-08-23 -1.503538 -2.263381\n",
+       "2020-08-25 -2.594362 -1.577329"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[[1, 2, 4], [0, 2]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "显式整行切片："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-08-22</th>\n",
+       "      <td>0.585824</td>\n",
+       "      <td>-0.006890</td>\n",
+       "      <td>-0.847243</td>\n",
+       "      <td>-1.44641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-23</th>\n",
+       "      <td>-1.503538</td>\n",
+       "      <td>0.867013</td>\n",
+       "      <td>-2.263381</td>\n",
+       "      <td>-2.04173</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   A         B         C        D\n",
+       "2020-08-22  0.585824 -0.006890 -0.847243 -1.44641\n",
+       "2020-08-23 -1.503538  0.867013 -2.263381 -2.04173"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[1:3, :]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "显式整列切片："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-08-21</th>\n",
+       "      <td>1.049402</td>\n",
+       "      <td>-2.227476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-22</th>\n",
+       "      <td>-0.006890</td>\n",
+       "      <td>-0.847243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-23</th>\n",
+       "      <td>0.867013</td>\n",
+       "      <td>-2.263381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-24</th>\n",
+       "      <td>0.276492</td>\n",
+       "      <td>-1.174007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-25</th>\n",
+       "      <td>-0.708836</td>\n",
+       "      <td>-1.577329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-26</th>\n",
+       "      <td>-0.917163</td>\n",
+       "      <td>-0.868527</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   B         C\n",
+       "2020-08-21  1.049402 -2.227476\n",
+       "2020-08-22 -0.006890 -0.847243\n",
+       "2020-08-23  0.867013 -2.263381\n",
+       "2020-08-24  0.276492 -1.174007\n",
+       "2020-08-25 -0.708836 -1.577329\n",
+       "2020-08-26 -0.917163 -0.868527"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " df.iloc[:, 1:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "显式提取值："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.006889627931941812"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[1, 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "快速访问标量，与上述方法等效："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.006889627931941812"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iat[1, 1]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
