运算-直方图、apply函数、字符串方法

--- a/1-入门Pandas.ipynb
+++ b/1-入门Pandas.ipynb
@@ -3539,6 +3539,230 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2、Apply 函数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apply 函数处理数据："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>F</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-08-21</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.675741</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-22</th>\n",
+       "      <td>-0.747461</td>\n",
+       "      <td>0.057506</td>\n",
+       "      <td>1.287932</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-23</th>\n",
+       "      <td>-0.860826</td>\n",
+       "      <td>0.583144</td>\n",
+       "      <td>2.808498</td>\n",
+       "      <td>15</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-24</th>\n",
+       "      <td>-0.642016</td>\n",
+       "      <td>1.799190</td>\n",
+       "      <td>1.619318</td>\n",
+       "      <td>20</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-25</th>\n",
+       "      <td>-2.023130</td>\n",
+       "      <td>1.803430</td>\n",
+       "      <td>0.686924</td>\n",
+       "      <td>25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-26</th>\n",
+       "      <td>-3.195022</td>\n",
+       "      <td>2.246748</td>\n",
+       "      <td>-0.783597</td>\n",
+       "      <td>30</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   A         B         C   D   F\n",
+       "2020-08-21  0.000000  0.000000  1.675741   5 NaN\n",
+       "2020-08-22 -0.747461  0.057506  1.287932  10 NaN\n",
+       "2020-08-23 -0.860826  0.583144  2.808498  15 NaN\n",
+       "2020-08-24 -0.642016  1.799190  1.619318  20 NaN\n",
+       "2020-08-25 -2.023130  1.803430  0.686924  25 NaN\n",
+       "2020-08-26 -3.195022  2.246748 -0.783597  30 NaN"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.apply(np.cumsum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    1.599924\n",
+       "B    1.216046\n",
+       "C    3.146262\n",
+       "D    0.000000\n",
+       "F         NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.apply(lambda x: x.max() - x.min())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3、直方图"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " s = pd.Series(np.random.randint(0, 7, size=10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    5\n",
+       "1    2\n",
+       "2    1\n",
+       "3    0\n",
+       "4    6\n",
+       "5    0\n",
+       "6    0\n",
+       "7    3\n",
+       "8    5\n",
+       "9    4\n",
+       "dtype: int32"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3\n",
+       "5    2\n",
+       "6    1\n",
+       "4    1\n",
+       "3    1\n",
+       "2    1\n",
+       "1    1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4、字符串方法"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
