--- a/Cookbook-惯用语.ipynb
+++ b/Cookbook-惯用语.ipynb
@@ -30,7 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " df = pd.DataFrame({'AAA': [4, 5, 6, 7],\n",
+    "# 初始化数据，供后面练习使用\n",
+    "df = pd.DataFrame({'AAA': [4, 5, 6, 7],\n",
     "                    'BBB': [10, 20, 30, 40],\n",
     "                    'CCC': [100, 50, -30, -50]})"
    ]
@@ -128,16 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 当AAA列数值大于5时，把对应的BBB列数值更新为-1\n",
     "df.loc[df.AAA >= 5, 'BBB'] = -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -170,40 +172,40 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "      <td>100</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>2000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>5</td>\n",
        "      <td>-1</td>\n",
-       "      <td>50</td>\n",
+       "      <td>555</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>6</td>\n",
        "      <td>-1</td>\n",
-       "      <td>-30</td>\n",
+       "      <td>555</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>7</td>\n",
        "      <td>-1</td>\n",
-       "      <td>-50</td>\n",
+       "      <td>555</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   AAA  BBB  CCC\n",
-       "0    4   10  100\n",
-       "1    5   -1   50\n",
-       "2    6   -1  -30\n",
-       "3    7   -1  -50"
+       "   AAA   BBB   CCC\n",
+       "0    4  2000  2000\n",
+       "1    5    -1   555\n",
+       "2    6    -1   555\n",
+       "3    7    -1   555"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,6 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 如果AAA列数据大于等于5，把对应BBB,CCC列的数据更新为555\n",
     "df.loc[df.AAA >= 5, ['BBB', 'CCC']] = 555"
    ]
   },
@@ -318,6 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 如果AAA列数据小于5，则把对应BBB,CCC列数据更新为2000\n",
     "df.loc[df.AAA < 5, ['BBB', 'CCC']] = 2000"
    ]
   },
@@ -491,6 +495,194 @@
    ],
    "source": [
     "df.where(df_mask, -1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "用 NumPy where() 函数实现 if-then-else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 初始化数据\n",
+    "df = pd.DataFrame({'AAA': [4, 5, 6, 7],\n",
+    "                   'BBB': [10, 20, 30, 40],\n",
+    "                   'CCC': [100, 50, -30, -50]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAA</th>\n",
+       "      <th>BBB</th>\n",
+       "      <th>CCC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>40</td>\n",
+       "      <td>-50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   AAA  BBB  CCC\n",
+       "0    4   10  100\n",
+       "1    5   20   50\n",
+       "2    6   30  -30\n",
+       "3    7   40  -50"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 新建一列logic，当AAA列数据大于5，logic标识为gihg,否则为low\n",
+    "df['logic'] = np.where(df['AAA'] > 5, 'high', 'low')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAA</th>\n",
+       "      <th>BBB</th>\n",
+       "      <th>CCC</th>\n",
+       "      <th>logic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>100</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>50</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-30</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>40</td>\n",
+       "      <td>-50</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   AAA  BBB  CCC logic\n",
+       "0    4   10  100   low\n",
+       "1    5   20   50   low\n",
+       "2    6   30  -30  high\n",
+       "3    7   40  -50  high"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
